<resources>
    <string name="app_name">JTSPORTECH ViSport</string>
    <string name="app_jt">JTSPORTECH</string>
    <string name="splash_jtsport_slogan">Ingenuity vision, leading technology</string>
    <string name="guide_skip">Skip</string>
    <string name="oneclick_oneclick_login_with_your_local_number">One-click login with your local number</string>
    <string name="oneclick_invitation_code_hint">Please enter an invitation code (optional)</string>
    <string name="oneclick_log_in_with_your_account_and_password">Log in with your account and password</string>
    <string name="oneclick_log_in_with_a_different_phone_number">Log in with a different phone number</string>
    <string name="oneclick_other_ways_to_log_in">Other ways to log in</string>
    <string name="oneclick_privacy_agreement">登录即表示同意匠体<annotation privacyAgreement="privacyAgreement">《隐私协议》</annotation>和<annotation userAgreement="userAgreement">《用户协议》</annotation></string>
    <string name="account_user_agreement">user agreement</string>
    <string name="account_privacy_agreement">privacy agreement</string>
    <string name="account_login">Log in</string>
    <string name="account_account_enter_hint">Please enter the account number</string>
    <string name="account_password_enter_hint">Please enter your password</string>
    <string name="phone_code_enter_hint">Please enter a verification code</string>
    <string name="phone_get_a_verification_code">Get a verification code</string>
    <string name="phone_one_click_login">One-click login</string>
    <string name="phone_please_enter_your_mobile_phone_number">please enter your mobile phone number</string>
    <string name="phone_please_agree_to_the_privacy_policy_first">Please agree to the Privacy Policy first</string>
    <string name="agreement_user_agreement">User Agreement</string>
    <string name="agreement_privacy_agreement">Privacy Agreement</string>
    <string name="agreement_button_not_activated">You are required to read the full Privacy Agreement</string>
    <string name="agreement_button_activated">Acknowledge and agree to this Agreement</string>
    <string name="dashboard_good_morning">good morning</string>
    <string name="dashboard_good_afternoon">good afternoon</string>
    <string name="dashboard_good_evening">good evening</string>
    <string name="dashboard_recently">recently</string>
    <string name="dashboard_all">all</string>
    <string name="dashboard_race">race</string>
    <string name="dashboard_training">training</string>
    <string name="dashboard_events">events</string>
    <string name="dashboard_contingent">contingent</string>
    <string name="dashboard_switch_teams">switch teams</string>
    <string name="dashboard_team_info">team info</string>
    <string name="dashboard_sign_out">sign out</string>
    <string name="dashboard_home">home</string>
    <string name="dashboard_message">message</string>
    <string name="dashboard_mine">mine</string>
    <string name="dashboard_scan_the_qr_code_to_log_in_successfully">Scan the QR code to log in successfully</string>
    <string name="mine_recently_watched">recently watched</string>
    <string name="mine_my_favorites">my favorites</string>
    <string name="mine_my_team">my team</string>
    <string name="mine_personal_center">personal center</string>
    <string name="mine_privacy_and_security">privacy and security</string>
    <string name="mine_set_up">set up</string>
    <string name="mine_about_us">about us</string>
    <string name="mine_invite_friends">invite friends</string>
    <string name="message_message">message</string>
    <string name="message_message_quantity">message(%1$d strip)</string>
    <string name="message_clear_unread">clear unread</string>
    <string name="message_search">search</string>
    <string name="message_tournament_notifications">tournament notifications</string>
    <string name="message_app_messages">app messages</string>
    <string name="message_interactive_messages">interactive messages</string>
    <string name="message_no_news_yet">No news yet</string>
    <string name="message_are_you_sure_to_clear_unread_messages">Are you sure you want to clear unread messages?</string>
    <string name="application_app_notifications">Notification</string>
    <string name="application_match_news">Match news</string>
    <string name="application_the_version_has_been_updated">JTSPORTECH V%1$s Updated</string>
    <string name="application_what_is_new_in_this_update">About this update:\n%1$s</string>
    <string name="home_race">race</string>
    <string name="home_training">training</string>
    <string name="home_events">events</string>
    <string name="home_jt">JTSPORTECH</string>
    <string name="search_search_history">search history</string>
    <string name="search_please_enter_a_team_event_to_search">Please enter a team/event to search</string>
    <string name="search_all_historical_search_history">All historical search history</string>
    <string name="search_clear_all_searches">Clear all searches</string>
    <string name="search_retrieval">retrieval</string>
    <string name="search_sift">Filter</string>
    <string name="search_released">Release data</string>
    <string name="search_unlimited">All</string>
    <string name="search_within_a_day">In one day</string>
    <string name="search_within_a_week">In one week</string>
    <string name="search_within_a_month">In one month</string>
    <string name="search_the_length_of_the_video">Length of video</string>
    <string name="search_more_than_10_minutes">>10 min</string>
    <string name="search_30_60_minutes">30-60 min</string>
    <string name="search_60_90_minutes">60-90 min</string>
    <string name="search_more_than_90_minutes">>90 min</string>
    <string name="search_search_scope">Search range</string>
    <string name="search_no_relevant_content_was_found">No relevant content was found</string>
    <string name="search_please_enter_a_keyword_to_search_for_a_message">Please enter a keyword to search for a message</string>
    <string name="search_interaction">interaction</string>
    <string name="event_today">today</string>
    <string name="event_all_event">全部比赛</string>
    <string name="event_notify_me_of_the_start">Notify me</string>
    <string name="event_view">Check</string>
    <string name="event_appointment">Arranged</string>
    <string name="event_all_events">all events</string>
    <string name="event_there_are_no_scheduled_events_yet">There are no scheduled events yet</string>
    <string name="event_next_event">next event</string>
    <string name="about_company">JTSportech (Beijing) Sport Science and Technology co., ltd</string>
    <string name="about_company_introduce">As a leading domestic sports science and sports technology enterprise, Jiangti Sports Technology continuously adheres to the world\'s cutting-edge academic drive and has deep cooperation with multiple world-renowned sports schools, including Loughborough University, Cardiff City University, Reykjavik University, University of Bristol, Beijing Sport University, Shanghai Sport University, etc. With the determination to contribute to China\'s sports research, Jiangti Sports Technology promotes the development of the world\'s sports science industry through academic research, and combines obstetrics research to serve the Chinese sports industry. Established for two years, Jiangti has established its own Jiangti Sports Science Laboratory, with research fields spanning sports performance analysis, physical training, and sports science. It has published multiple scientific research papers in multiple international journals, top international academic conferences, and national academic conferences. We are open to scientific research cooperation in multiple fields, mainly focusing on sports performance analysis and cutting-edge research in physical fitness training. Research on the Application of Sports Artificial Intelligence and Machine Learning in the Field of Sports Performance Analysis. Research Data Planning and Research Fang Xiangming in Sports Human Science</string>
    <string name="about_scan_to_see_more">scan to see more</string>
    <string name="invite_code_invite_friends">invite friends</string>
    <string name="invite_code_invite_friends_tips">Download apps through QR code identification and add invited users</string>
    <string name="invite_code_save_into_the_album">save into the album</string>
    <string name="invite_code_share_with_friends">share with friends</string>
    <string name="setup_clear_cache">clear cache</string>
    <string name="setup_check_for_updates">check for updates</string>
    <string name="setup_language_switch">language switch</string>
    <string name="setup_encourage">encourage</string>
    <string name="setup_currently_the_latest_version">currently the latest version</string>
    <string name="language_chinese_simplified">Chinese Simplified</string>
    <string name="language_english">English</string>
    <string name="privacy_and_security_user_privacy_agreement">user privacy agreement</string>
    <string name="privacy_and_security_user_use_agreement">user use agreement</string>
    <string name="privacy_and_security_change_your_password">change your password</string>
    <string name="privacy_and_security_cancel_account">Cancel your account</string>
    <string name="privacy_and_security_link_your_account">Link your account</string>
    <string name="privacy_and_security_wechat_account">WeChat account</string>
    <string name="privacy_and_security_qq_account">QQ account</string>
    <string name="privacy_and_security_unbound">Unbound</string>
    <string name="privacy_and_security_bind">Bind</string>
    <string name="privacy_and_security_the_unbinding_is_successful">The unbinding is successful</string>
    <string name="privacy_and_security_unbound_tips">The platform is currently bound, and it will be unbound if you continue to operate, please confirm whether to unbind the platform?</string>
    <string name="privacy_and_security_prompt">prompt</string>
    <string name="change_password_phone_tips">For the security of your account, please verify with your mobile phone</string>
    <string name="change_password_please_enter_phone_number">Please enter phone number</string>
    <string name="change_password_next_step">Next step</string>
    <string name="change_password_please_enter_your_old_password">please enter your old password</string>
    <string name="change_password_please_enter_a_new_password">please enter a new password</string>
    <string name="change_password_please_confirm_the_new_password">please confirm the new password</string>
    <string name="change_password_modification_completed">modification completed</string>
    <string name="change_password_please_log_out_and_log_in_again">please log out and log in again</string>
    <string name="change_password_sms_tips">Enter %1$s SMS code</string>
    <string name="cancelAccount_please_read_the_cancellation_agreement">Please read the cancellation agreement（%1$dS）</string>
    <string name="cancelAccount_the_logout_is_complete">the logout is complete</string>
    <string name="cancelAccount_you_have_completed_the_account_closure">You have completed the account closure</string>
    <string name="profile_user_name">user name</string>
    <string name="profile_user_role">user role</string>
    <string name="profile_phone_number">phone number</string>
    <string name="profile_current_subject">current subject</string>
    <string name="alert_are_you_sure_you_want_to_log_out_of_your_current_account">Are you sure you want to log out of your current account?</string>
    <string name="alert_cancel">Cancel</string>
    <string name="alert_sure">Sure</string>
    <string name="profile_update_avatar">更换头像</string>
    <string name="profile_album">相册</string>
    <string name="profile_camera">拍摄</string>
</resources>