<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".mine.setup.SetupFragment">

    <com.jtsportech.visport.android.components.AppBarView
        android:id="@+id/ap_setup"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        app:bar_left_icon="@drawable/icon_backarrow_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/mine_about_us" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ap_setup">

        <com.jtsportech.visport.android.components.SubmenuButton
            android:id="@+id/sb_clear_cache"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:isShowUnderscore="true"
            app:title="@string/setup_clear_cache"
            app:titleColor="@color/mine_shaft"
            app:titleSize="14sp" />

        <com.jtsportech.visport.android.components.SubmenuButton
            android:id="@+id/sb_check_for_updates"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:title="@string/setup_check_for_updates"
            app:isShowUnderscore="true"
            app:titleColor="@color/mine_shaft"
            app:titleSize="14sp" />

        <com.jtsportech.visport.android.components.SubmenuButton
            android:id="@+id/sb_language_switch"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:isShowUnderscore="true"
            app:title="@string/setup_language_switch"
            app:titleColor="@color/mine_shaft"
            app:titleSize="14sp" />

        <com.jtsportech.visport.android.components.SubmenuButton
            android:id="@+id/sb_encourage"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:title="@string/setup_encourage"
            app:titleColor="@color/mine_shaft"
            app:titleSize="14sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>