<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="24dp"
    android:background="@drawable/shape_dialog_bg">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/dashboard_sign_out"
        android:textColor="@color/mine_shaft"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/alert_are_you_sure_you_want_to_log_out_of_your_current_account"
        android:textColor="@color/mine_shaft"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_positive"
        android:layout_width="138dp"
        android:layout_height="44dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/shape_alert_cancel_bg"
        android:gravity="center"
        android:text="@string/alert_cancel"
        android:textColor="@color/gray"
        app:layout_constraintEnd_toStartOf="@+id/tv_negative"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_subtitle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_negative"
        android:layout_width="138dp"
        android:layout_height="44dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/shape_alert_sure_bg"
        android:gravity="center"
        android:text="@string/alert_sure"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_positive"
        app:layout_constraintTop_toBottomOf="@+id/tv_subtitle" />


</androidx.constraintlayout.widget.ConstraintLayout>