<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".mine.language.LanguageFragment">

    <com.jtsportech.visport.android.components.AppBarView
        android:id="@+id/ap_language"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        app:bar_left_icon="@drawable/icon_backarrow_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/setup_language_switch" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ap_language">

        <com.jtsportech.visport.android.components.SubmenuButton
            android:id="@+id/sb_chinese_simplified"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:isShowMore="false"
            app:moreIcon="@drawable/icon_agree"
            app:isShowUnderscore="true"
            app:titleIcon="@drawable/icon_chinese"
            app:title="@string/language_chinese_simplified"
            app:titleColor="@color/mine_shaft"
            app:titleSize="14sp" />

        <com.jtsportech.visport.android.components.SubmenuButton
            android:id="@+id/sb_english"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:moreIcon="@drawable/icon_agree"
            app:isShowMore="false"
            app:titleIcon="@drawable/icon_en"
            app:title="@string/language_english"
            app:titleColor="@color/mine_shaft"
            app:titleSize="14sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>